src/objects/Education__c.object
<CustomObject>
    <fields>
        <fullName>College_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>College Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Educations</relationshipLabel>
        <relationshipName>Educations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Degree__c</fullName>
        <label>Degree</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Education</label>
        <referenceTo>Applicant__c</referenceTo>
        <relationshipLabel>Educations</relationshipLabel>
        <relationshipName>Educations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Employee_Name__c</fullName>
        <label>Employee Name</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Educations</relationshipLabel>
        <relationshipName>Educations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Passed_Out__c</fullName>
        <label>Passed Out</label>
        <type>Date</type>
    </fields>
    <label>Education</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Education Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Educations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>